# tiger_genai25_hackathon

./: LICENSE  README.md
agent-service/: .dockerignore  .gitignore  API_USAGE_GUIDE.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  requirements.txt  run.py  sample.envf  simple_upload.py  simple_upload_external.py
agent-service/routers/: __init__.py  submit_router.py
agent-service/schemas/: __init__.py  request_schemas.py
agent-service/services/: __init__.py  agent_service.py
collab/: MedicalAgent.ipynb
genai-agentos/: .gitignore  README.md  blood_test.py  output_sample.md  test_prompts.md
genai-agentos/cli/: clean_venvs.py  register_agents.py  run_all_agents.py  setup_agents.sh
genai-agentos/cli/agents/analyzer/: analyzer.py
genai-agentos/cli/agents/diagnosis_reasoner/: diagnosis_reasoner.py
genai-agentos/cli/agents/medical_image_interpreter/: medical_image_interpreter.py  pyproject.toml
genai-agentos/cli/agents/ocr_lab_test_result/: ocr_lab_test_result.py  pyproject.toml
genai-agentos/genai_agents_example/read_txt_file_agent/: main.py
genai_frontend/: README.md  pubspec.yaml
genai_frontend/android/app/: build.gradle.kts
genai_frontend/ios/Runner/: Info.plist
genai_frontend/ios/Runner.xcodeproj/: project.pbxproj
genai_frontend/lib/: main.dart
genai_frontend/linux/: CMakeLists.txt
genai_frontend/linux/runner/: my_application.cc
genai_frontend/macos/Runner.xcodeproj/: project.pbxproj
genai_frontend/web/: index.html
genai_frontend/windows/: CMakeLists.txt
genai_frontend/windows/runner/: Runner.rc  main.cpp
(+73 files in other folders)
