[project]
name = "genai-agents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"

dependencies = [
    "genai-protocol",
    "loguru>=0.7.3",
    "openai>=1.70.0",
    "pydantic==2.11.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "dlhpcstarter==0.1.4",
    "transformers==4.31.0",
    "torchvision==0.15.2",
    "bert-score==0.3.13",
    "pycocoevalcap==1.2"
]
